--- a/.github/workflows/secrets_job.yaml
+++ b/.github/workflows/secrets_job.yaml
@@ -24,7 +24,7 @@ jobs:
         
       - name: Retrieve secrets
         run: |
-          secret_object=$(aws secretmanager get-secret-value --secret-id aboutStephen --query SecretString --output json)
+          secret_object=$(aws secretsmanager get-secret-value --secret-id aboutStephen --query SecretString --output json)
           echo "$secret_object" | sed -n 's/.*\\"hobby\\":\\"\([^\\"]*\)\\".*/\1/p'
       
       - name: Retrieve parameter
