--- a/.github/workflows/secrets_job.yaml
+++ b/.github/workflows/secrets_job.yaml
@@ -3,31 +3,30 @@ run-name: Running retrieve ${{ github.actor }}
 
 
 on:
-  push:
-    branches:
-      - Dev
-
+ pull_request:
+   branches:
+     - Dev
 
 jobs:
   AWS-login:
-   runs-on: ubuntu-latest
+     runs-on: ubuntu-latest
 
-   steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-  
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
-      
-    - name: Retrieve secrets
-      run: |
-        secret_object=$(aws secretsmanager get-secret-value --secret-id aboutStephen --query SecretString --output json)
-        echo "$secret_object" | sed -n 's/.*\\"hobby\\":\\"\([^\\"]*\)\\".*/\1/p'
+     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
     
-    - name: Retrieve parameter
-      run: |
-        aws ssm get-parameter --name /stephen/details --query Parameter.Value --output text
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+        
+      - name: Retrieve secrets
+        run: |
+          secret_object=$(aws secretsmanager get-secret-value --secret-id aboutStephen --query SecretString --output json)
+          echo "$secret_object" | sed -n 's/.*\\"hobby\\":\\"\([^\\"]*\)\\".*/\1/p'
+      
+      - name: Retrieve parameter
+        run: |
+          aws ssm get-parameter --name /stephen/details --query Parameter.Value --output text
